# coco_object_detection

./: test_accuracy_nntool.py  test_accuracy_tflite.py  tutorial.ipynb
gap9_app/: .gitignore  CMakeLists.txt  Kconfig  Makefile  coco_labels.h  coco_test_image_gray.ppm  coco_test_image_gray_320_240.ppm  common.mk  gaptest.yml  main.c  nntool_generate_model.py  parse_meas_all.sh  run_meas.sh  sdk.config  ssd_mobilenet.c  ssd_mobilenet.h
gap9_app/common/: model_decl.mk  model_rules.mk
